objects/DMAPP__DM_Collaboration_Map_Node__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing parts of the Insight Maps associated with Opportunities</description>
    <fields>
        <fullName>DMAPP__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>DM_Collaboration_Map_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Collaboration_Map__c</fullName>
        <label>DM Insight Map</label>
        <referenceTo>DMAPP__DM_Collaboration_Map__c</referenceTo>
        <relationshipName>DM_Collaboration_Map_Nodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__New_Node_Type__c</fullName>
        <label>New Node Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Goal</fullName>
                </value>
                <value>
                    <fullName>Pressure</fullName>
                </value>
                <value>
                    <fullName>Initiative</fullName>
                </value>
                <value>
                    <fullName>Obstacle</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Node_Type__c</fullName>
        <label>Node Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Key Business Requirement</fullName>
                </value>
                <value>
                    <fullName>Consequential Pain</fullName>
                </value>
                <value>
                    <fullName>Tactical Pain</fullName>
                </value>
                <value>
                    <fullName>Solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Smart_Node__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Smart Node</label>
        <referenceTo>DMAPP__Insight_Smart_Node__c</referenceTo>
        <relationshipName>Insight_Map_Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Sort_Order__c</fullName>
        <defaultValue>1000000</defaultValue>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Insight Map Node</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Insight Map Node Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insight Map Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>